--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 # Dependency directories
 node_modules/
 
-# Logs
-logs/
-*.log
-npm-debug.log*
-
 # Environment variables
 .env
 
 # Optional: OS or IDE files
 
+.DS_Store
+.vscode/
+.idea/
